# toothfile_app_finish

./: TOUCHBAR_MACOS_GUIDE.md  TOUCHBAR_SOLUTION_SUMMARY.md  build_firebase_release.bat  build_log.txt  build_log_cmd.txt  build_log_retry.txt  client_788668999922-ev0060rn3mnvkuaauth9h2h5doa95sof.apps.googleusercontent.com.plist  client_secret_788668999922-tidk1a1enrfmsvviomvn2iso08m6ge33.apps.googleusercontent.com.json  code.txt  errors.txt  package-lock.json  prompt.txt  pubspec.yaml  test_touchbar.dart
.github/workflows/: android.yml  dart.yml  ios.yml  linux.yml  macos.yml  windows.yml
android/: build.gradle.kts  build_log.txt
android/app/: build.gradle.kts  google-services.json
ios/: Podfile
ios/Runner/: GoogleService-Info.plist  (+1 more)
lib/: create_order_dialog.dart  dashboard_page.dart  delete_account.dart  delete_account_dialog.dart  directory_tab.dart  edit_order_dialog.dart  file_tracker_tab.dart  forward_dialog.dart  invite_collaborator_dialog.dart  macos_touchbar_test.dart  main.dart  native_touchbar_helper.dart  order_form_tab.dart  order_model.dart  push_notification_service.dart  received_files_tab.dart  requests_tab.dart  send_files_page.dart  send_files_tab.dart  settings_tab.dart  supabase_auth_service.dart  tooth_selection.dart  touch_bar_helper.dart  touch_bar_widget.dart  touchbar_debug_app.dart  touchbar_demo.dart  touchbar_example.dart  touchbar_test.dart
linux/: CMakeLists.txt
supabase/: config.toml
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt  firebase_stub.cpp
windows/firebase_stub/: CMakeLists.txt
(+23 files in other folders)
